# MapReduce

./: CMakeLists.txt  HowDoesItWork.txt  Read.txt  callable_example.cpp  callable_example_BYOLYA.cpp  counting.cpp  data.txt  e.py  example  example.cpp  map_reduce.cpp  map_reduce_integral.cpp  map_reduce_integral.h  map_reduce_integral_mpi.cpp  map_reduce_wods_mpi.cpp  map_reduce_words.cpp  map_reduce_words.h  printing_MAP.cpp  result.txt  timing.cpp  writing.cpp
